feat: promotion detailed page

--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -23,3 +23,5 @@ figure {
 @import '../sections/connection';
 @import '../sections/payment';
 @import '../sections/articles';
+@import '../sections/detailed';
+@import '../sections/products';
