--- a/src/scss/dev/markusDM.scss
+++ b/src/scss/dev/markusDM.scss
@@ -14,3 +14,4 @@
 @import '../sections/profile-not';
 @import '../sections/placing-an';
 @import '../sections/modal-profile';
+@import '../sections/modal-global';
