--- a/src/components/_card.html
+++ b/src/components/_card.html
@@ -315,7 +315,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="btn__card">
+                            <button class="btn__card card-modal-open">
                                 <span> В корзину </span>
 
                                 <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
@@ -427,6 +427,195 @@
                         Отправить
                     </button>
                 </form>
+            </div>
+        </div>
+        <div class="card-modal">
+            <div class="card-modal__wrap">
+                <div class="card-modal__close">
+                    <svg  viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_8423_24692)">
+                        <path d="M14.8996 5.09961L5.00013 14.9991M5 5.10029L9.94988 10.0494" stroke="#898485" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M11.8984 12L14.8984 15" stroke="#898485" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_8423_24692">
+                        <rect width="20" height="20" fill="white" transform="translate(0 20) rotate(-90)"/>
+                        </clipPath>
+                        </defs>
+                        </svg>
+                </div>
+                <div class="card-modal__box">
+                    <button class="card-modal__box-close">
+                        <svg  viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_8423_24692)">
+                            <path d="M14.8996 5.09961L5.00013 14.9991M5 5.10029L9.94988 10.0494" stroke="#898485" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M11.8984 12L14.8984 15" stroke="#898485" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_8423_24692">
+                            <rect width="20" height="20" fill="white" transform="translate(0 20) rotate(-90)"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                            
+                    </button>
+                    <div class="card-modal__box-image">
+                        <img src="./assets/images/sections/card/card11.png" alt="">
+                    </div>
+                    <div class="card-modal__box-inner">
+                        <div class="card-modal__box-title">Подарочная коробка-переноска для цветов с ручками, 16 см*16 см*24 см. (10 шт./упак), пастельно-сирен</div>
+                        <div class="card-modal__box-wrap">
+                            <div class="card-modal__box-price">
+                                45.90₽/от 100 тыс.
+                            </div>
+                            <div class="basket__card-info-top-counter-field quantity">
+                                <button
+                                    class="quantity__button_minus basket__card-info-top-counter-field-button"
+                                >
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M17 12.28H7V11H17V12.28Z"
+                                            fill="#1D1D1B"
+                                        />
+                                    </svg>
+                                </button>
+
+                                <input type="number" value="10" min="1" />
+
+                                <button
+                                    class="quantity__button_plus basket__card-info-top-counter-field-button"
+                                >
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M12.7619 11.2381H17V12.7619H12.7619V17H11.2381V12.7619H7V11.2381H11.2381V7H12.7619V11.2381Z"
+                                            fill="#1D1D1B"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+                            <button class="btn__card">
+                                <span> В корзине </span>
+
+                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="60" height="60" rx="30" fill="#F4F4F4" />
+                                    <path
+                                        d="M25.5 25.6787V24.7087C25.5 22.4587 27.31 20.2487 29.56 20.0387C32.24 19.7787 34.5 21.8887 34.5 24.5187V25.8987"
+                                        stroke="#1D1D1B" stroke-width="1.5" stroke-miterlimit="10"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M27.0008 40.0088H33.0008C37.0208 40.0088 37.7408 38.3988 37.9508 36.4388L38.7008 30.4388C38.9708 27.9988 38.2708 26.0088 34.0008 26.0088H26.0008C21.7308 26.0088 21.0308 27.9988 21.3008 30.4388L22.0508 36.4388C22.2608 38.3988 22.9808 40.0088 27.0008 40.0088Z"
+                                        stroke="#1D1D1B" stroke-width="1.5" stroke-miterlimit="10"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path d="M33.4945 30.0087H33.5035" stroke="#1D1D1B" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path d="M26.4945 30.0087H26.5035" stroke="#1D1D1B" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-modal__box">
+                    <button class="card-modal__box-close">
+                        <svg  viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_8423_24692)">
+                            <path d="M14.8996 5.09961L5.00013 14.9991M5 5.10029L9.94988 10.0494" stroke="#898485" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M11.8984 12L14.8984 15" stroke="#898485" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_8423_24692">
+                            <rect width="20" height="20" fill="white" transform="translate(0 20) rotate(-90)"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                            
+                    </button>
+                    <div class="card-modal__box-image">
+                        <img src="./assets/images/sections/card/card11.png" alt="">
+                    </div>
+                    <div class="card-modal__box-inner">
+                        <div class="card-modal__box-title">Подарочная коробка-переноска для цветов с ручками, 16 см*16 см*24 см. (10 шт./упак), пастельно-сирен</div>
+                        <div class="card-modal__box-wrap">
+                            <div class="card-modal__box-price">
+                                45.90₽/от 100 тыс.
+                            </div>
+                            <div class="basket__card-info-top-counter-field quantity">
+                                <button
+                                    class="quantity__button_minus basket__card-info-top-counter-field-button"
+                                >
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M17 12.28H7V11H17V12.28Z"
+                                            fill="#1D1D1B"
+                                        />
+                                    </svg>
+                                </button>
+
+                                <input type="number" value="10" min="1" />
+
+                                <button
+                                    class="quantity__button_plus basket__card-info-top-counter-field-button"
+                                >
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M12.7619 11.2381H17V12.7619H12.7619V17H11.2381V12.7619H7V11.2381H11.2381V7H12.7619V11.2381Z"
+                                            fill="#1D1D1B"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+                            <button class="btn__card">
+                                <span> В корзине </span>
+
+                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="60" height="60" rx="30" fill="#F4F4F4" />
+                                    <path
+                                        d="M25.5 25.6787V24.7087C25.5 22.4587 27.31 20.2487 29.56 20.0387C32.24 19.7787 34.5 21.8887 34.5 24.5187V25.8987"
+                                        stroke="#1D1D1B" stroke-width="1.5" stroke-miterlimit="10"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M27.0008 40.0088H33.0008C37.0208 40.0088 37.7408 38.3988 37.9508 36.4388L38.7008 30.4388C38.9708 27.9988 38.2708 26.0088 34.0008 26.0088H26.0008C21.7308 26.0088 21.0308 27.9988 21.3008 30.4388L22.0508 36.4388C22.2608 38.3988 22.9808 40.0088 27.0008 40.0088Z"
+                                        stroke="#1D1D1B" stroke-width="1.5" stroke-miterlimit="10"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path d="M33.4945 30.0087H33.5035" stroke="#1D1D1B" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path d="M26.4945 30.0087H26.5035" stroke="#1D1D1B" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-modal__inner">
+                <div class="card-modal__price">Итого
+                    4 044 ₽</div>
             </div>
         </div>
 </section>
