--- a/src/scss/dev/markusDM.scss
+++ b/src/scss/dev/markusDM.scss
@@ -15,3 +15,4 @@
 @import '../sections/placing-an';
 @import '../sections/modal-profile';
 @import '../sections/modal-global';
+@import '../sections/card-modal';
