--- a/src/components/_variants.html
+++ b/src/components/_variants.html
@@ -6,7 +6,7 @@
             <div class="swiper variants__slider variants-swiper">
                 <ul class="swiper-wrapper variants__list">
                     <li class="swiper-slide">
-                        <div data-three-card class="variants__card">
+                        <div class="variants__card">
                             <span class="variants__card-counter h h_h2">01</span>
 
                             <figure class="variants__card-image">
@@ -22,7 +22,7 @@
                         </div>
                     </li>
                     <li class="swiper-slide">
-                        <div data-three-card class="variants__card">
+                        <div class="variants__card">
                             <span class="variants__card-counter h h_h2">02</span>
 
                             <figure class="variants__card-image">
@@ -38,7 +38,7 @@
                         </div>
                     </li>
                     <li class="swiper-slide">
-                        <div data-three-card class="variants__card">
+                        <div class="variants__card">
                             <span class="variants__card-counter h h_h2">03</span>
 
                             <figure class="variants__card-image">
