--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -97,7 +97,8 @@ section {
 }
 
 .swiper-button-next,
-.swiper-button-prev {
+.swiper-button-prev,
+.scroll-btn {
     border-radius: 50%;
     background: transparent;
     width: 5.6rem !important;
