--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -161,6 +161,23 @@
                         </div>
                     </div>
                     <ul class="footer__block-info social-list">
+                        <li class="social-list__icon social-list__icon_telegram">
+                            <a href="#">
+                                <svg
+                                    width="44"
+                                    height="44"
+                                    viewBox="0 0 44 44"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <rect width="44" height="44" rx="22" fill="#898485" />
+                                    <path
+                                        d="M30.8004 13.8626L27.4944 31.1217C27.4944 31.1217 27.0319 32.3183 25.7612 31.7444L18.1334 25.688L18.0981 25.6702C19.1284 24.7121 27.118 17.2731 27.4672 16.9359C28.0078 16.4137 27.6722 16.1028 27.0446 16.4973L15.2429 24.2585L10.6898 22.672C10.6898 22.672 9.97327 22.4081 9.90434 21.8342C9.8345 21.2594 10.7134 20.9485 10.7134 20.9485L29.2748 13.408C29.2748 13.408 30.8004 12.7139 30.8004 13.8626V13.8626Z"
+                                        fill="white"
+                                    />
+                                </svg>
+                            </a>
+                        </li>
                         <li class="social-list__icon social-list__icon_whatsapp">
                             <a href="#"
                                 ><svg
@@ -210,27 +227,12 @@
                                     /></svg
                             ></a>
                         </li>
-                        <li class="social-list__icon social-list__icon_telegram">
-                            <a href="#">
-                                <svg
-                                    width="44"
-                                    height="44"
-                                    viewBox="0 0 44 44"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <rect width="44" height="44" rx="22" fill="#898485" />
-                                    <path
-                                        d="M30.8004 13.8626L27.4944 31.1217C27.4944 31.1217 27.0319 32.3183 25.7612 31.7444L18.1334 25.688L18.0981 25.6702C19.1284 24.7121 27.118 17.2731 27.4672 16.9359C28.0078 16.4137 27.6722 16.1028 27.0446 16.4973L15.2429 24.2585L10.6898 22.672C10.6898 22.672 9.97327 22.4081 9.90434 21.8342C9.8345 21.2594 10.7134 20.9485 10.7134 20.9485L29.2748 13.408C29.2748 13.408 30.8004 12.7139 30.8004 13.8626V13.8626Z"
-                                        fill="white"
-                                    />
-                                </svg>
-                            </a>
-                        </li>
                     </ul>
                 </div>
                 <div class="footer__block">
-                    <h6 data-accordion-item class="text__regular-18 _is-active">О компании</h6>
+                    <a href="#" data-accordion-item class="footer__nav-subtitle text__regular-18 _is-active"
+                        >О компании</a
+                    >
                     <ul class="footer__nav-list text__regular-16">
                         <li><a href="#">Сотрудничество</a></li>
                         <li><a href="#">Акции</a></li>
@@ -242,7 +244,7 @@
                     </ul>
                 </div>
                 <div class="footer__block">
-                    <h6 data-accordion-item class="text__regular-18">Каталог</h6>
+                    <a href="#" data-accordion-item class="footer__nav-subtitle text__regular-18">Каталог</a>
                     <ul class="footer__nav-list text__regular-16">
                         <li><a href="#">Товары со скидкой</a></li>
                         <li><a href="#">Новинки</a></li>
