--- a/src/components/sale.html
+++ b/src/components/sale.html
@@ -78,6 +78,68 @@
             <div class="sale__pagination">
                 <div class="sale__pagination-bullets"></div>
             </div>
+            <button type="button" class="sale__navigation-btn swiper-button-prev">
+                <svg
+                    width="25"
+                    height="19"
+                    viewBox="0 0 25 19"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        d="M1.37227 9.51401L24.0001 9.51401"
+                        stroke="#2B5644"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    ></path>
+                    <path
+                        d="M5.61555 13.7573L9.85828 18"
+                        stroke="#2B5644"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    ></path>
+                    <path
+                        d="M1.3721 9.51474L9.85754 1.02929"
+                        stroke="#2B5644"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    ></path>
+                </svg>
+            </button>
+            <button type="button" class="sale__navigation-btn swiper-button-next">
+                <svg
+                    width="25"
+                    height="19"
+                    viewBox="0 0 25 19"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        d="M23.6276 9.51401L0.999756 9.51401"
+                        stroke="#2B5644"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    ></path>
+                    <path
+                        d="M19.3843 13.7573L15.1416 18"
+                        stroke="#2B5644"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    ></path>
+                    <path
+                        d="M23.6278 9.51474L15.1423 1.02929"
+                        stroke="#2B5644"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    ></path>
+                </svg>
+            </button>
         </div>
         <div class="sale__sale-cards swiper">
             <div class="sale__wrapper swiper-wrapper">
