--- a/src/scss/sections/_popular-card.scss
+++ b/src/scss/sections/_popular-card.scss
@@ -4,6 +4,50 @@
     padding: 3.2rem;
     display: block;
     position: relative;
+    overflow: hidden;
+
+    @media (any-hover: hover) {
+        &:hover {
+            color: $white;
+
+            &::after {
+                transform: translate(50%, 50%) scale(2);
+            }
+
+            .popular-card__title-h,
+            .popular-card__title-t {
+                color: $white;
+            }
+
+            .popular-card__link {
+                span {
+                    color: $pink;
+                }
+                svg path {
+                    stroke: $pink;
+                }
+            }
+        }
+    }
+
+    &::after {
+        content: '';
+
+        position: absolute;
+        bottom: 0;
+        right: 0;
+
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+
+        background-color: $light-green;
+
+        transform-origin: right bottom;
+        transform: translate(50%, 50%) scale(0);
+        transition: transform 1s ease;
+    }
+
     &.swiper-slide {
         width: auto;
         height: auto;
@@ -23,6 +67,8 @@
         }
     }
     &__image {
+        position: relative;
+        z-index: 2;
         width: 46.9rem;
         height: 43.6rem;
         border-radius: 2rem;
@@ -46,19 +92,25 @@
     }
 
     &__title {
+        position: relative;
+        z-index: 2;
         display: flex;
         flex-direction: column;
+        transition: color 0.5s ease;
+
         &-h {
             font-size: 2.4rem;
             font-weight: 500;
             line-height: 120%;
             margin-bottom: 1.2rem;
+            transition: color 0.5s ease;
         }
 
         &-t {
             font-size: 1.6rem;
             font-weight: 400;
             color: $grey-text;
+            transition: color 0.5s ease;
         }
 
         @media (max-width: 48em) {
@@ -75,23 +127,30 @@
 
     &__link {
         position: absolute;
+        z-index: 2;
         color: $grey-text;
         bottom: 3.4rem;
         right: 3.7rem;
         display: flex;
         align-items: center;
+
         span {
             font-size: 1.6rem;
             font-weight: 500;
             line-height: 120%;
             margin-right: 0.4rem;
             color: $green;
+            transition: color 1s ease;
         }
 
         svg {
             width: 2rem;
             height: 2rem;
-            transition: transform 0.5s ease;
+            transition: transform 1s ease;
+
+            path {
+                transition: stroke 1s ease;
+            }
         }
 
         @media (any-hover: hover) {
