--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -346,9 +346,16 @@
         color: $black-secondary;
 
         a {
-            transition: color 0.5s ease;
+            transition:
+                color 0.5s ease,
+                text-shadow 0.3s ease;
             @media (any-hover: hover) {
                 &:hover {
+                    text-shadow:
+                        -0.02rem -0.02rem 0 #2b5644,
+                        0.02rem -0.02rem 0 #2b5644,
+                        -0.02rem 0.02rem 0 #2b5644,
+                        0.02rem 0.02rem 0 #2b5644;
                     color: #2b5644;
                 }
             }
