--- a/src/ui/styles/_news-card.scss
+++ b/src/ui/styles/_news-card.scss
@@ -1,11 +1,66 @@
 .news {
+    &__slider {
+        @media (min-width: 48em) {
+            height: 69rem;
+        }
+    }
+
     &__card {
+        position: relative;
         padding: 3.2rem;
         background-color: $grey-bg;
         border-radius: 3rem;
         display: flex;
         flex-direction: column;
-        height: 100%;
+        height: auto;
+        min-height: 50rem;
+
+        transition:
+            min-height 0.5s ease,
+            background-color 0.5s ease,
+            border-radius 0.5s ease;
+
+        .popular__btn-arrow {
+            position: absolute;
+            top: 0;
+            right: 0;
+
+            opacity: 0;
+            visibility: hidden;
+
+            transition:
+                opacity 0.5s ease,
+                visibility 0.5s ease;
+        }
+
+        @media (any-hover: hover) {
+            &:hover {
+                background-color: $light-green;
+                border-radius: 3rem 22rem 3rem 3rem;
+                min-height: 69rem;
+
+                .popular__btn-arrow {
+                    opacity: 1;
+                    visibility: visible;
+                }
+
+                .news {
+                    &__card-image {
+                        border-radius: 2rem 22rem 2rem 2rem;
+                    }
+                    &__card-publication-date,
+                    &__card-title,
+                    &__card-description {
+                        color: $white;
+                    }
+                    &__card-publication-icon {
+                        svg path {
+                            stroke: $white;
+                        }
+                    }
+                }
+            }
+        }
 
         @include small-tablet {
             border-radius: 4.8rem;
@@ -15,6 +70,8 @@
             border-radius: 2rem;
             height: 38rem;
             margin-bottom: 2.4rem;
+
+            transition: border-radius 0.5s ease;
 
             @include small-tablet {
                 margin-bottom: 3.2rem;
@@ -46,10 +103,16 @@
                 @include small-tablet {
                     @include sizes(4.8rem, 4.8rem);
                 }
+
+                path {
+                    transition: stroke 0.5s ease;
+                }
             }
 
             &-date {
-                @include small-tablet{
+                transition: color 0.5s ease;
+
+                @include small-tablet {
                     font-weight: 400;
                     font-size: 3rem;
                     line-height: 130%;
@@ -59,6 +122,7 @@
 
         &-title {
             margin-bottom: 0.8rem;
+            transition: color 0.5s ease;
 
             @include small-tablet {
                 margin-bottom: 1.6rem;
@@ -70,9 +134,11 @@
         }
 
         &-description {
+            transition: color 0.5s ease;
+
             @include clamp-text(3);
 
-            @include small-tablet{
+            @include small-tablet {
                 font-weight: 400;
                 font-size: 3rem;
                 line-height: 130%;
