--- a/src/ui/styles/_variants-card.scss
+++ b/src/ui/styles/_variants-card.scss
@@ -13,7 +13,20 @@
         flex-direction: column;
         height: 100%;
 
-        @include small-tablet{
+        transition:
+            box-shadow 0.5s ease,
+            transform 1s ease;
+
+        @media (any-hover: hover) {
+            &:hover {
+                transform: translateY(-1rem);
+                box-shadow:
+                    0 2rem 4rem rgba(23, 38, 47, 0.3),
+                    inset 0 0 0 1px #d7e5f4;
+            }
+        }
+
+        @include small-tablet {
             border-radius: 4.8rem;
         }
 
@@ -22,7 +35,7 @@
             margin-bottom: 1.2rem;
             color: $pink;
 
-            @include small-tablet{
+            @include small-tablet {
                 margin-bottom: 2.4rem;
                 font-weight: 500;
                 font-size: 4.2rem;
@@ -37,7 +50,7 @@
             @include sizes(100%, 26.5rem);
             margin-bottom: 2.4rem;
 
-            @include small-tablet{
+            @include small-tablet {
                 @include sizes(100%, 32rem);
                 border-radius: 3.2rem;
                 margin-bottom: 4rem;
@@ -54,7 +67,7 @@
             border-bottom: 0.1rem solid $fontColor;
             display: block;
 
-            @include small-tablet{
+            @include small-tablet {
                 margin-bottom: 2.4rem;
                 padding-bottom: 2.4rem;
                 font-weight: 500;
@@ -64,7 +77,7 @@
         }
 
         &-description {
-            @include small-tablet{
+            @include small-tablet {
                 font-size: 3rem;
                 line-height: 130%;
             }
