--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -118,9 +118,6 @@
     &:not(&._no-hover, &_reversed) {
         @media (any-hover: hover) {
             &:hover {
-                &::after {
-                    max-width: 100%;
-                }
                 svg {
                     transform: translateX(0.3rem);
                 }
@@ -134,9 +131,6 @@
         }
         @media (any-hover: hover) {
             &:hover {
-                &::after {
-                    max-width: 100%;
-                }
                 svg {
                     transform: translateX(-0.3rem) rotate(180deg);
                 }
@@ -261,8 +255,8 @@
     background-color: $pink;
     font-size: 1.8rem;
     transition:
-        background-color 0.3s ease,
-        0.3s color ease;
+        transform 0.5s ease,
+        box-shadow 0.5s ease;
     position: relative;
 
     @include small-tablet {
@@ -275,8 +269,8 @@
     &:not(.--disabled, &[disabled], &_ghost) {
         &:not(.--loading) {
             @include hover {
-                background-color: $green;
-                color: $white;
+                transform: translateY(-0.2rem);
+                box-shadow: 0 1.5rem 1.5rem -1rem rgba(34, 60, 80, 0.3);
             }
         }
     }
@@ -366,10 +360,6 @@
             padding: 2.6rem 3.2rem 2.8rem 4.8rem;
         }
 
-        @include hover {
-            border-color: $green;
-        }
-
         img {
             width: 2rem;
             height: 2rem;
@@ -428,20 +418,6 @@
             }
         }
 
-        @include hover {
-            background-color: $green;
-
-            span {
-                color: $white;
-            }
-
-            svg {
-                path {
-                    stroke: $green;
-                }
-            }
-        }
-
         &:active {
             border-color: $green;
             background-color: $white !important;
@@ -467,14 +443,6 @@
         border-radius: 10rem;
         background-color: transparent;
         color: $white;
-
-        @media (any-hover: hover) {
-            &:hover {
-                background-color: $bgFon;
-                color: #1d1d1b;
-                border: 1.5px solid $bgFon;
-            }
-        }
     }
 }
 
@@ -489,24 +457,6 @@
             box-shadow:
                 0 2rem 4rem rgba(23, 38, 47, 0.3),
                 inset 0 0 0 1px #d7e5f4;
-        }
-    }
-}
-
-main {
-    &:not(.--disabled, &[disabled], &_ghost) {
-        .btn {
-            transition:
-                transform 0.5s ease,
-                box-shadow 0.5s ease,
-                background-color 0.5s ease,
-                color 0.5s ease;
-            @media (any-hover: hover) {
-                &:hover {
-                    transform: translateY(-0.2rem);
-                    box-shadow: 0 1.5rem 1.5rem -1rem rgba(34, 60, 80, 0.3);
-                }
-            }
         }
     }
 }
@@ -587,6 +537,38 @@ main {
                 }
             }
         }
+    }
+}
+
+.scroll-btn {
+    position: fixed !important;
+    z-index: 50;
+    bottom: 3rem;
+    right: 3rem;
+    cursor: pointer;
+    transform: scale(0);
+    transition: transform 0.5s ease;
+
+    @media (min-width: 48em) {
+        &._is-visible {
+            transform: scale(1);
+        }
+    }
+
+    @media (any-hover: hover) {
+        &:hover {
+            svg.scroll-btn__icon {
+                transform: rotate(90deg) translateX(-61%);
+            }
+        }
+    }
+
+    svg {
+        position: absolute;
+        top: 50%;
+        left: 1.4rem;
+        transform: rotate(90deg) translateX(-50%);
+        transition: transform 0.5s ease;
     }
 }
 
